lubuntu-default-settings (0.27) UNRELEASED; urgency=low

  [ Bhaskar Kandiyal ]
  * Changed default theme of lightdm to Lubuntu-default (LP: #968527)

 -- Julien Lavergne <gilir@ubuntu.com>  Sun, 01 Apr 2012 15:48:36 +0200

lubuntu-default-settings (0.26) precise; urgency=low

  * debian/maintscript:
   - Add missing file.
  * etc/xdg/lxsession/*/desktop.conf:
   - Add DMZ-white mouse cursor by default (LP: #923344)
  * debian/control:
   - Recommend dmz-cursor-theme for the mouse theme.

 -- Julien Lavergne <gilir@ubuntu.com>  Sun, 04 Mar 2012 00:58:20 +0100

lubuntu-default-settings (0.25) precise; urgency=low

  [ Julien Lavergne ]
  * usr/share/lubuntu/openbox/rc.xml:
   - Add ability to use icons in the menu.
   - Add ability to use menu.xml in $HOME.
  * usr/share/lubuntu/openbox/menu.xml:
   - Update the openbox menu with the new version of Openbox.

  [ Valdur Kana ]
  * usr/share/lubuntu/openbox/rc.xml:
   - Unmute audio when using shortcut for the volume (LP: #926246)
   - Use correct volume key for mute shortcut (LP: #926320)

 -- Julien Lavergne <gilir@ubuntu.com>  Thu, 23 Feb 2012 21:42:03 +0100

lubuntu-default-settings (0.24) precise; urgency=low

  [ Julien Lavergne ]
  * usr/share/lubuntu/openbox/rc.xml
   - Remove workaround for lxpanel run dialog, now it's fixed in lxpanel.
   - Revert maximised windows by default, need more integration (LP: #926788)
  * debian/control:
   - Add a recommend for xscreensaver, for the locking shortcut (LP: #923001)
  * usr/share/lxpanel/profile/Lubuntu/panels/panel:
   - Set the color font of the panel to white to match the new theme.

  [ Colin Watson ]
  * Use maintscript support in dh_installdeb rather than writing out
    dpkg-maintscript-helper commands by hand.  We now simply Pre-Depend on a
    new enough version of dpkg rather than using 'dpkg-maintscript-helper
    supports' guards, leading to more predictable behaviour on upgrades.
    (LP: #932209)

  [ Alexander Andjelkovic ]